Fixed some overflow issues

--- a/online_run/style.css
+++ b/online_run/style.css
@@ -4,6 +4,10 @@ body * {
     -webkit-box-sizing: border-box;
 }
 
+body {
+    margin: 10px;
+}
+
 body.embed {
     overflow: hidden;
 }
